# izzy-renderer

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  WELCOME.md  build.sh  classdiagram.mdj  compile-shaders.sh  conanfile.py  conanfile.txt  diffuse.frag.spv  diffuse.vert.spv  gitlab-ci.yml  pyproject.toml
apps/examples/: CMakeLists.txt  gui_lighteditor.cpp  gui_lighteditor.h  m_debugscene.cpp  m_icosphere.cpp  m_izzyrender.cpp  m_normalmapping.cpp  m_parallax.cpp  m_parallaxmapping.cpp  m_simplescene.cpp  m_wera3d.cpp  programoptions.h
apps/simpleviewer/: CMakeLists.txt
apps/simpleviewer/include/: ecs_factories.h  ecsw_camera.h  gui_system.h  scenegraph.h
apps/simpleviewer/src/: ecs_factories.cpp  gui_system.cpp  imgui_impl_opengl3.h  main.cpp
docs/: main.dia  (+2 more)
examples/: CMakeLists.txt  m_bloom.cpp  m_debugscene.cpp  m_deferredrender.cpp  m_glossyness.cpp  m_icosphere.cpp  m_izzyrender.cpp  m_normalmapping.cpp  m_parallaxmapping.cpp  m_pbspheres.cpp  m_plane.cpp  m_simplescene.cpp
lib/: CMakeLists.txt
lib/core/: CMakeLists.txt
lib/core/include/: core_exceptions.h  core_vertexarray.h
lib/debutl/: CMakeLists.txt
lib/debutl/include/: debughelper.h
lib/ecs/: CMakeLists.txt
lib/ecs/include/: core_util.h  ecs_camera.h  ecs_camerasystem.h  ecs_debug.h  ecs_debugmodel.h  ecs_debugshapefactory.h  ecs_debugsystem.h  ecs_dirty.h  ecs_firstpersoncontrol.h  ecs_firstpersoncontrolsystem.h  ecs_interactable.h  ecs_light.h  ecs_materialsystem.h  ecs_meshtransform.h  ecs_moveable.h  ecs_name.h  ecs_postprocess.h  ecs_relationship.h  ecs_relationshiputil.h  ecs_renderable.h  ecs_rendersubsystem.h  ecs_rendersystem.h  ecs_renderutil.h  ecs_scenegraph.h  ecs_scenegraphentity.h  ecs_shader.h  ecs_texture.h  ecs_texturesystem.h  ecs_transform.h  ecs_transformsystem.h  ecs_transformutil.h  ecs_wireframe.h  ecsu_relationshipsorter.h  izz.h  uniform_blinnphong.h  uniform_blinnphongsimple.h  uniform_constant.h  uniform_lambert.h  uniform_mvp.h  uniform_parallax.h  (+2 more)
lib/ecs/src/: ecs_camerasystem.cpp  ecs_debugSystem.cpp  ecs_debugshapefactory.cpp  ecs_debugsystem.cpp  ecs_firstpersoncontrolsystem.cpp  ecs_firstpersoncontrolsystem.t.cpp  ecs_lightsystem.cpp  ecs_lightsystem.h  ecs_lightsystem.t.cpp  ecs_relationshiputil.cpp  ecs_rendersubsystem.cpp  ecs_rendersystem.cpp  ecs_scenegraph.cpp  ecs_scenegraphentity.cpp  ecs_shader.t.cpp  ecs_texturesystem.cpp  ecs_transformsystem.cpp  ecs_transformsystem.t.cpp  ecs_transformutil.cpp  ecsu_relationshipsorter.cpp  ecsu_relationshipsorter.t.cpp  uniform_ubermaterial.cpp
lib/ecs_inputsystem/: CMakeLists.txt
lib/ecs_inputsystem/include/: io_command.h  io_inputlistener.h  io_inputsystem.h  io_keyconstants.h
lib/ecs_inputsystem/src/: io_inputsystem.cpp
lib/ecs_sg/include/: SceneGraph.h
lib/ecsg/: CMakeLists.txt
lib/ecsg/include/: ecsg_entityfactory.h  ecsg_lightfactory.h  ecsg_scenegraph.h  ecsg_scenegraphentity.h
lib/ecsg/src/: ecsg_entityfactory.cpp  ecsg_lightfactory.cpp  ecsg_scenegraph.cpp  ecsg_scenegraphentity.cpp
lib/ecsw/: CMakeLists.txt
lib/ecsw/include/: ecsu_sceneutil.h  ecsw_material.h  ecsw_meshinstance.h  ecsw_model.h  ecsw_scene.h  ecsw_transform.h
lib/ecsw/src/: ecsu_sceneutil.cpp  ecsw_material.cpp  ecsw_model.cpp  ecsw_scene.cpp
lib/fractal/: CMakeLists.txt
lib/fractal-curve-converter/include/: fractal_curveconverter.h
lib/fractal-curve-converter/src/: fractal_curvegenerator.cpp
lib/fractal/include/: fractal_curvegenerator.h  fractal_penrosetiling.h  fractal_rule.h  fractal_state.h  fractal_stochastictree.h  fractal_tree.h  fractal_treefactory.h
lib/fractal/src/: fractal_drawcommands.h  fractal_stochastictree.cpp  fractal_tree.cpp  fractal_treefactory.cpp
lib/fractal_generator/: CMakeLists.txt
lib/fractal_generator/include/: fractal_generator.h
lib/fractal_generator/src/: fractal_generator.cpp
lib/geo/: CMakeLists.txt
lib/geo/include/: geo_boundingbox.h  geo_camera.h  geo_capabilities.h  geo_curve.h  geo_effect.h  geo_graph.h  geo_light.h  geo_material.h  geo_materialdescription.h  geo_materialloader.h  geo_materialtemplate.h  geo_materialutil.h  geo_mesh.h  geo_meshinstance.h  geo_meshloader.h  geo_meshtransform.h  geo_meshutil.h  geo_primitivefactory.h  geo_scene.h  geo_sceneloader.h  geo_scenetransform.h  geo_shapeutil.h  geo_texture.h  geo_textureloader.h  geo_transform.h  geo_ubermaterialdata.h
lib/geo/src/: geo_boundingbox.cpp  geo_graph.cpp  geo_graph.t.cpp  geo_material.t.cpp  geo_materialloader.cpp  geo_materialloader.t.cpp  geo_materialutil.cpp  geo_meshloader.cpp  geo_meshtransform.cpp  geo_meshutil.cpp  geo_meshutil.t.cpp  geo_primitivefactory.cpp  geo_scene.cpp  geo_sceneloader.cpp  geo_sceneloader.t.cpp  geo_textureloader.cpp  geo_ubermaterialdata.cpp
lib/geo/testdata/: three_instanced_cubes_one_sphere.fbx
lib/georm/: CMakeLists.txt
lib/georm/include/: anim_animationsystem.h  anim_constant.h  anim_localrotation.h  georm_exrloader.h  georm_fontsystem.h  georm_materialsystem.h  georm_resourcemanager.h  georm_sceneloader.h  georm_stbtextureloader.h  georm_texturesystem.h
lib/georm/src/: anim_animationsystem.cpp  georm_exrloader.cpp  georm_fontsystem.cpp  georm_materialsystem.cpp  (+5 more)
lib/glrs/: CMakeLists.txt
lib/gui/: CMakeLists.txt
lib/izzgl/: CMakeLists.txt
lib/izzgui/: CMakeLists.txt
lib/lsw/: CMakeLists.txt
lib/lsw-gl/: CMakeLists.txt
lib/lsw-gui/: CMakeLists.txt
lib/rm/: CMakeLists.txt
lib/shapes/: CMakeLists.txt
lib/viewer/: CMakeLists.txt
lib/vwr/: CMakeLists.txt
lib/vwrx/: CMakeLists.txt
lib/workspace/: CMakeLists.txt
src/: CMakeLists.txt  gui_lighteditor.cpp  gui_lighteditor.h  izz_animationsystem.cpp  izz_debugshapefactory.cpp  izz_debugsystem.cpp  izz_entityfactory.cpp  izz_fontsystem.cpp  izz_materialsystem.cpp  izz_relationshiputil.cpp  izz_resourcemanager.cpp  izz_scenegraph.cpp  izz_scenegraphentity.cpp  izz_scenegraphhelper.cpp  izz_scenegraphhelper.t.cpp  izz_sceneloader.cpp  izz_statcounter.cpp  izz_stbtextureloader.cpp  izz_texture.cpp  izz_texturesystem.cpp  m_izzyrender.cpp
(+489 files in other folders)
