
add_subdirectory(workspace)
add_subdirectory(fractal)
add_subdirectory(fractal_generator)
#add_subdirectory(ecs_transformsystem)
#add_subdirectory(ecs_camerasystem)
add_subdirectory(ecs_inputsystem)

add_subdirectory(ecs)
add_subdirectory(ecsg)
add_subdirectory(ecsw)
add_subdirectory(vwr)
#add_subdirectory(vwrx)
#add_subdirectory(viewer_textures)
add_subdirectory(geo)
add_subdirectory(georm)
add_subdirectory(glrs)  # OpenGL based Render System