# Represents the core set of libraries. The bulk of the interfaces is defined here (dependency inversion principle).
# Most esoteric systems are not part of the core, such as the gui, the window manager and the render system.
#add_library(lsw-core
#        )
#
#set_target_properties(lsw-core PROPERTIES LINKER_LANGUAGE CXX)
#target_include_directories(lsw-core PUBLIC include PRIVATE src)